# git_practice

./: .gitignore  .pre-commit-config.yaml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  pull-request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: docs.yml  generate_index_and_deploy_pages.yml  static.yml
c/day1_dynamic_array/: CMakeLists.txt
c/day1_dynamic_array/src/: dyn_array.c  dyn_array.h
c/day1_dynamic_array/tests/: dyn_array_test.cpp
docs/source/: conf.py  index.rst
